<resources>
    <string name="app_name">Brainfuck Interpreter</string>
    <string name="title_activity_run">Run Brainfuck</string>

    <string name="action_settings">Settings</string>
    <string name="action_run">Run</string>
    <string name="action_close">Close</string>

    <string name="sample">++++++++[&gt;+++++&gt;++++&lt;&lt;-]&gt;.&gt;+.&lt;+.</string>

    <string name="command_plus">+</string>
    <string name="command_minus">-</string>
    <string name="command_previous">&lt;</string>
    <string name="command_next">&gt;</string>
    <string name="command_output">.</string>
    <string name="command_input">,</string>
    <string name="command_open">[</string>
    <string name="command_close">]</string>
    <string name="command_space">SPACE</string>

    <string name="card_index" formatted="false">#%%0%dd</string>
    <string name="card_value" formatted="false">%%0%dd (0x%%0%dX)</string>

    <string name="hello_world">Hello world!</string>

    <string name="error_empty">Nothing to run</string>
    <string name="toast_copied">Copied to clipboard</string>
</resources>
