<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/command"
        android:hint="@string/sample"
        android:typeface="monospace"
        android:inputType="textNoSuggestions|textImeMultiLine|text|textMultiLine"
        android:gravity="start|top"
        android:layout_weight="1"
        android:background="@null"
        android:nestedScrollingEnabled="true"
        android:padding="8dp"
        android:textSize="15sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/ic_keyboard_arrow_up_white_18dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/command_up"
                android:typeface="monospace"
                android:layout_weight="1"
                android:onClick="onCommandButtonClick"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/ic_keyboard_arrow_down_white_18dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/command_down"
                android:layout_weight="1"
                android:onClick="onCommandButtonClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_plus"
                    android:id="@+id/command_plus"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_minus"
                    android:id="@+id/command_minus"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_previous"
                    android:id="@+id/command_previous"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_next"
                    android:id="@+id/command_next"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_output"
                    android:id="@+id/command_output"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_input"
                    android:id="@+id/command_input"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_open"
                    android:id="@+id/command_open"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/command_close"
                    android:id="@+id/command_close"
                    android:typeface="monospace"
                    android:layout_weight="1"
                    android:onClick="onCommandButtonClick" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/ic_backspace_white_18dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/command_backspace"
                android:typeface="monospace"
                android:layout_weight="1"
                android:onClick="onCommandButtonClick"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/ic_keyboard_return_white_18dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/command_enter"
                android:layout_weight="1"
                android:onClick="onCommandButtonClick"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_left_white_18dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/command_left"
            android:layout_weight="1"
            android:onClick="onCommandButtonClick"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/command_space"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/command_space"
            android:typeface="monospace"
            android:layout_weight="5"
            android:onClick="onCommandButtonClick"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_right_white_18dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/command_right"
            android:layout_weight="1"
            android:onClick="onCommandButtonClick"
            />

    </LinearLayout>

</LinearLayout>

